--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "11ty",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "eleventy --serve",
     "build": "eleventy --config=.distconfig.js"
@@ -10,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@11ty/eleventy": "^3.0.0"
+    "@11ty/eleventy": "^3.0.0",
+    "@portabletext/to-html": "^2.0.13"
   }
 }
