--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@11ty/eleventy": "^3.0.0",
-    "@portabletext/to-html": "^2.0.13"
+    "@portabletext/to-html": "^2.0.13",
+    "@sanity/image-url": "^1.0.2"
   }
 }
